@@ -217,6 +217,9 @@ Other Changes
 * SOLR-7081: Add new test case to test if create/delete/re-create collections work.
   (Christine Poerschke via Ramkumar Aiyengar)
 
+* SOLR-7387: Facet Module - distributed search didn't work when sorting terms
+  facet by min, max, avg, or unique functions.  (yonik)
+
 ==================  5.1.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
